<resources>
    <string name="app_name">maxApp</string>
    <string name="version">v.1.0.0</string>
    <string name="tools">Ferramentas</string>
    <string name="salesSummary">Resumo de Vendas</string>
    <string name="orders">Pedidos</string>
    <string name="clients">Clientes</string>
    <string name="infoClients">Dados do Cliente</string>
    <string name="orderOfHistory">Hist. de Pedido</string>
    <string name="info">Dados</string>
    <string name="orderHistories">Hist. Pedidos</string>
    <string name="licenses">Alvarás</string>
    <string name="contacts">Contatos</string>
    <string name="checkClientStatus">Verificar Status do Cliente</string>
    <string name="search">Pesquisa</string>
    <string name="legends">Legendas</string>
    <string name="license">Alvará</string>
    <string name="check_person_ERP">verifique com o responsável pelo ERP</string>
    <string name="no_licenses_to_display">Não há alvarás para exibir,</string>
    <string name="nothing_found">Nada encontrado...</string>
    <string name="order_status_erp">Status do Pedido no ERP</string>

    <string-array name="legends_details_status_order_erp">
        <item>Em processo por parte do FV</item>
        <item>Pedido recusado pelo ERP</item>
        <item>Posição no ERP Pendente</item>
        <item>Posição no ERP Bloqueado</item>
        <item>Posição no ERP Liberado</item>
        <item>Posição no ERP Montado</item>
        <item>Posição no ERP Faturado</item>
        <item>Posição no ERP Cancelado</item>
        <item>Orçamento</item>
    </string-array>

    <string-array name="legends_critical">
        <item>Aguardando Retorno do ERP</item>
        <item>Sucesso</item>
        <item>Falha Parcial</item>
        <item>Falha Total</item>
    </string-array>

    <string-array name="legends_legends">
        <item>Pedido sofreu corte</item>
        <item>Pedido com falta</item>
        <item>Pedido cancelado no ERP</item>
        <item>Pedido com devolução</item>
        <item>Pedido feito pelo Telemarketing</item>
    </string-array>

</resources>
